--- a/.github/workflows/retrain.yml
+++ b/.github/workflows/retrain.yml
@@ -34,12 +34,14 @@ jobs:
       - name: Format check with black
         run: black --check src tests scripts || true
 
-      - name: Run tests
-        run: pytest -v --cov=src
+- name: Run tests
+  run: |
+    PYTHONPATH=. pytest -v --cov=src
 
-      - name: Retrain model + write metrics
-        run: |
-          python scripts/train.py --data data/sample.csv
+- name: Retrain model + write metrics
+  run: |
+    PYTHONPATH=. python scripts/train.py --data data/sample.csv
+
 
       - name: Commit metrics (and model) if changed
         if: github.event_name == 'push'
